gitops/clusters/de/hetzner/cluster/apps/traefik-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: "gateway.tailb40090.ts.net"
      tls:
        mode: Terminate
        certificateRefs:
          - name: traefik-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
