gitops/clusters/de/hetzner/cluster/apps/traefik-gateway/flux-operator-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-operator
  namespace: traefik
  annotations:
    tailscale.com/proxy-group: "ingress"
    tailscale.com/tags: "tag:admin-services"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - flux
  defaultBackend:
    service:
      name: traefik-traefik
      port:
        number: 80
