gitops/clusters/de/hetzner/cluster/apps/traefik-gateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    tailscale.com/proxy-group: "ingress"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - gateway
  defaultBackend:
    service:
      name: traefik-traefik
      port:
        number: 80
